@@ -90,6 +90,7 @@ AcqWaveform = include          # Psana::Acqiris::ConfigV1, Psana::Acqiris::DataD
 Alias = include                # Psana::Alias::ConfigV1
 AnalogInput = include          # Psana::Bld::BldDataAnalogInputV1
 Andor = include                # Psana::Andor::ConfigV1, Psana::Andor::FrameV1
+Andor3d = include              # Psana::Andor3d::ConfigV1, Psana::Andor3d::FrameV1
 Arraychar = include            # Psana::Arraychar::DataV1
 Control = include              # Psana::ControlData::ConfigV1, Psana::ControlData::ConfigV2, Psana::ControlData::ConfigV3
 Cspad = include                # Psana::CsPad::ConfigV1, Psana::CsPad::ConfigV2, Psana::CsPad::ConfigV3, Psana::CsPad::ConfigV4, Psana::CsPad::ConfigV5, Psana::CsPad::DataV1, Psana::CsPad::DataV2
